# object-detection

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: darknet_object_detector_config.yaml  object_detector_config.yaml  ros_config.yaml
config/darknet_resources/: README
config/darknet_resources/weights/: README
msg/: DetectedObjectMsg.msg  DetectedObjectsMsg.msg
src/detection_node/: detection_node.py
src/object_detectors/: darknet_object_detector.py  detected_object.py  object_detector_main.py
src/utils/: utils.py
